src/components/views/LoginView/styles/index.scss
@import '~/src/styles/newIndex.scss';

.dashboard-template .dashboard-content-container {
  padding: 2rem 1rem;

  .form-footer {
    // Layout
    margin-top: 1.4rem;
    text-align: center;

    // Design
    font-family: 'Open Sans', $text-font;
    font-size: 1.2rem;
    line-height: 1.6rem;
    font-weight: 400;

    span {
      font-weight: 600;
      text-transform: uppercase;
      cursor: pointer;

      &:hover {
        text-shadow: 0 0 2px $gray-4;
      }
    }
  }
}

